--- a/index.html
+++ b/index.html
@@ -9,9 +9,19 @@
 </head>
 
 <body>
-  <h1 class="text-3xl font-bold underline">
-    My-Cash
+  <h1 class="text-5xl font-bold text-center">
+    Welcome to <span class="font-bold leading-3 text-rose-900">my cash</span>
   </h1>
+
+  <div class="login-area bg-teal-900 py-8 w-9/12 container mx-auto">
+    <h2> Please log in </h2>
+
+    <input class="w-96 block" type="texttexttext">
+    <input class="w-96 block my-4" type="texttexttext">
+
+    <button>submit</button>
+
+  </div>
 </body>
 
 </html>
