--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
 </head>
 
 <body>
-  <h1 class="text-5xl font-bold text-center">
+  <h1 class="text-5xl font-bold text-center mb-5">
     Welcome to <span class="font-bold leading-3 text-rose-900">my cash</span>
   </h1>
 
-  <div class="login-area bg-teal-900 py-8 w-9/12 container mx-auto">
-    <h2> Please log in </h2>
+  <div class="rounded login-area bg-teal-900 py-8 w-9/12 container mx-auto px-5">
+    <h2 class="text-3xl text-rose-700 mb-4"> Please log in </h2>
 
-    <input class="w-96 block" type="texttexttext">
-    <input class="w-96 block my-4" type="texttexttext">
+    <input class="rounded w-96 block p-4" type="text" placeholder="Your email">
+    <input class="rounded w-96 block p-4 my-4" type="text" placeholder="Your password">
 
-    <button>submit</button>
+    <button class=" rounded py-4 px-10 bg-teal-300 w-25">submit</button>
 
   </div>
 </body>
