--- a/index.html
+++ b/index.html
@@ -16,12 +16,16 @@
   <div class="rounded login-area bg-teal-900 py-8 w-9/12 container mx-auto px-5">
     <h2 class="text-3xl text-rose-700 mb-4"> Please log in </h2>
 
-    <input class="rounded w-96 block p-4" type="text" placeholder="Your email">
-    <input class="rounded w-96 block p-4 my-4" type="text" placeholder="Your password">
+    <input id="user-email" class="rounded w-96 block p-4" type="text" placeholder="Your email">
+    <input id="user-password" class="rounded w-96 block p-4 my-4" type="text" placeholder="Your password">
 
-    <button class=" rounded py-4 px-10 bg-teal-300 w-25">submit</button>
+    <button id="login-btn" class=" rounded py-4 px-10 bg-teal-300 w-25">submit</button>
 
   </div>
+
+
+
+  <script src="./cash.js""></script>
 </body>
 
 </html>
