--- a/cash.html
+++ b/cash.html
@@ -14,18 +14,35 @@
 
   <main>
     <section class="font-semibold text-3xl grid grid-cols-3 gap-4 text-center p-8">
-      <div class="text-rose-900 rounded deposit bg-lime-900 p-10">
-        <h3> My deposit</h3>
+      <div class="text-black-900 rounded deposit bg-lime-900 p-10">
+        <h3> My total deposit <span>$</span><span id="total-deposit">000</span></h3>
       </div>
       <div class="text-rose-500 text-3xl rounded balance bg-green-900 p-10">
-        <h3> My Withdrawn </h3>
+        <h3> My total Withdrawn </h3>
       </div>
       <div class="text-rose-200 text-3xl rounded widthdrawn bg-pink-900 p-10">
-        My withdrawn
+        <h3> Net balance <span>$</span><span id="net-balance">000</span></h3>
+      </div>
+
+    </section>
+    <section class="font-semibold text-3xl grid grid-cols-2 gap-4 p-8">
+      <div class="text-rose-900 rounded deposit bg-lime-900 p-10 ">
+        <h3 class="mb-3 balck"> Input balance</h3>
+        <input id="deposit-field" class="rounded w-96 block p-4" type="text" placeholder="Your deposit">
+        <button id="deposit-btn" class=" rounded py-3 mt-2 px-10 bg-teal-300 w-25">submit</button>
+
+
+      </div>
+      <div class="text-rose-500 text-3xl rounded balance bg-green-900 p-10">
+        <h3 class="mb-3"> Withdrawn balance </h3>
+        <input id="user-password" class="rounded w-96 block p-4" type="text" placeholder="Your widthdrawn">
+        <button id="login-btn" class="mt-2 rounded py-3 px-10 bg-teal-300 w-25">submit</button>
+
       </div>
 
     </section>
   </main>
+  <script src="./cash.js"></script>
 </body>
 
 </html>
