--- a/cash.html
+++ b/cash.html
@@ -18,7 +18,7 @@
         <h3> My total deposit <span>$</span><span id="total-deposit">000</span></h3>
       </div>
       <div class="text-rose-500 text-3xl rounded balance bg-green-900 p-10">
-        <h3> My total Withdrawn </h3>
+        <h3> My total widthdrawn <span>$</span><span id="total-withdrawn">000</span></h3>
       </div>
       <div class="text-rose-200 text-3xl rounded widthdrawn bg-pink-900 p-10">
         <h3> Net balance <span>$</span><span id="net-balance">000</span></h3>
@@ -35,14 +35,15 @@
       </div>
       <div class="text-rose-500 text-3xl rounded balance bg-green-900 p-10">
         <h3 class="mb-3"> Withdrawn balance </h3>
-        <input id="user-password" class="rounded w-96 block p-4" type="text" placeholder="Your widthdrawn">
-        <button id="login-btn" class="mt-2 rounded py-3 px-10 bg-teal-300 w-25">submit</button>
+        <input id="user-withdrawn" class="rounded w-96 block p-4" type="text" placeholder="Your widthdrawn">
+        <button id="withdrwan-btn" class="mt-2 rounded py-3 px-10 bg-teal-300 w-25">submit</button>
 
       </div>
 
     </section>
   </main>
   <script src="./cash.js"></script>
+  <script src="./withdrawn.js"></script>
 </body>
 
 </html>
