--- a/cash.html
+++ b/cash.html
@@ -21,7 +21,7 @@
         <h3> My total widthdrawn <span>$</span><span id="total-withdrawn">000</span></h3>
       </div>
       <div class="text-rose-200 text-3xl rounded widthdrawn bg-pink-900 p-10">
-        <h3> Net balance <span>$</span><span id="net-balance">000</span></h3>
+        <h3> Net balance <span>$</span><span id="balance">000</span></h3>
       </div>
 
     </section>
